2009-03-31  Corinna Vinschen  <corinna@vinschen.de>

	* setup2.sgml (setup-locale-problems): Fix an incomplete sentence.

2009-03-31  Corinna Vinschen  <corinna@vinschen.de>

	* faq-using.xml (faq.using.unicode): Modernize.
	(faq.api.symlinkstoppedworking): Move here from faq-api.xml.

2009-03-30  Dave Korn  <dave.korn.cygwin@gmail.com>

	* faq-using.xml (faq.using.bloda):  Update with new entries.

2009-03-26  Corinna Vinschen  <corinna@vinschen.de>

	* cygwinenv.sgml: Add text to explain new UTF-16 symlinks.
	* faq-api.xml: Add FAQ entry "Why do some of my old symlinks don't
	work anymore?"
	* new-features.sgml: Fix symlink text.  Add new UTF-16 symlinks.
	* overview2.sgml: Add text about new UTF-16 symlinks and potential
	problems with old symlinks.
	* pathnames.sgml: Fix typo.  
	* setup2.sgml: Extend text about problems with symlinks.

2009-03-26  Corinna Vinschen  <corinna@vinschen.de>

	* new-features.sgml: Replace GB2312 with GBK.
	* setup2.sgml: Ditto.

2009-03-25  Corinna Vinschen  <corinna@vinschen.de>

	* pathnames.sgml: Add a note that ASCII SO handling isn't foolproof
	under all circumstances.

2009-03-25  Corinna Vinschen  <corinna@vinschen.de>

	* new-features.sgml: Add missing GB2312 and eucKR character sets.
	* pathnames.sgml: Change "DOS devices" title to "Invalid filenames"
	and rephrase that section.
	Add section "Filenames with unusual (foreign) characters".
	Fix an emphasis.
	* setup-net.sgml: Integrate setup-locale section.
	* setup2.sgml: Add locale variables to section "Environment Variables".
	Add section "Internationalization".

2009-03-24  Corinna Vinschen  <corinna@vinschen.de>

	* new-features.sgml: Add section about chaged (no)winsymlink default.

2009-03-24  Corinna Vinschen  <corinna@vinschen.de>

	* cygwinenv.sgml: Move "codepage:xxx" to the removed options section.
	Change text accordingly.
	* new-features.sgml: Try to explain new way to define character sets.

2009-03-18  Corinna Vinschen  <corinna@vinschen.de>
