@@ -967,7 +967,7 @@ Cygwin application providing a native GUI.
 </para>
 </answer></qandaentry>
 
-<qandaentry id="faq.api.symlinkstoppedworking">
+<qandaentry id="faq.using.symlinkstoppedworking">
 <question><para>Why do some of my old symlinks don't work anymore?</para></question>
 <answer>
 
@@ -1018,6 +1018,29 @@ Cygwin mounts or symbolic links.
 </para>
 <para>See the entry "How do I convert between Windows and UNIX paths?"
 elsewhere in this FAQ.
+</para></answer></qandaentry>
+
+<qandaentry id="faq.using.ipv6">
+<question><para>Why do I get "Address family not supported" errors when playing with IPv6?</para></question>
+<answer>
+
+<para>IPv6 is fully supported and available right from the start with
+Windows Vista and Windows Server 2008.</para>
+
+<para>The previous generation of Windows,
+Windows XP and Windows Server 2003, only support IPv6 on an "experimental"
+basis.  On these Windows versions, the IPv6 TCP/IP stack is not installed
+automatically, rather the system administrator has to install it manually.
+Unless this has already been done on your machine, your machine is not
+IPv6-capable and that's why you see the "Address family not supported"
+error message.</para>
+
+<para>There's also a very experimental IPv6 stack for Windows 2000, and
+Cygwin will try its best to support it, but it's not recommended to install
+it.  Windows NT4 or older never saw IPv6 at all.</para>
+
+<para>For more information about IPv6 on Windows and how to install the
+IPv6 stack, see the <ulink url="http://www.microsoft.com/technet/network/ipv6/ipv6faq.mspx">Microsoft TechNet IPv6 FAQ article</ulink>
 </para></answer></qandaentry>
 
 <qandaentry id="faq.using.bloda">
