@@ -1,3 +1,9 @@
+2009-04-01  Corinna Vinschen  <corinna@vinschen.de>
+
+	* faq-using.xml (faq.using.symlinkstoppedworking): Rename.
+	(faq.using.ipv6): New IPv6 FAQ.
+	* gdb.sgml: Remove incorrect statement about Insight.
+
 2009-03-31  Corinna Vinschen  <corinna@vinschen.de>
 
 	* setup2.sgml (setup-locale-problems): Fix an incomplete sentence.
